# Ecosystem

./: .gitignore  .gitmodules  .replit  CHANGELOG.md  README.md  SECURITY.md  firebase.json  helper.py  herbivore.py  organism.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-enhancement.md  feature_request.md
.github/config/: codeql-config.yml
.github/workflows/: build.yml  ccpp-test.yml  ccpp.yml  check-lint.yml  clang-tidy.yml  codeql-analysis.yml  detox.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase-hosting.yml  greetings.yml  python-app.yml  python-test.yml  release.yml  report-gen.yml  report-man.yml  test.yml
Cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  sonar-project.properties
Cpp/ArrayFireTests/: test1.cpp  test2.cpp
Cpp/RandomTests/: CMakeLists.txt  generateReport.cpp  reportgen_test.cpp  sanity_test.cpp  test1.cpp  test2.cpp  test3.cpp  unit_tests.cpp
Cpp/Testing/: TAG
Cpp/Testing/20220402-2252/: Test.xml
Cpp/Testing/20220402-2305/: Test.xml
Cpp/WebApp/: CMakeLists.txt  app.cpp
Cpp/include/: DatabaseManager.hpp  EcosystemTypes.hpp  Registry.hpp  animal.hpp  database_manager.hpp  ecosystem_types.hpp  entity.hpp  god.hpp  helper.hpp  herbivore.hpp  logger.hpp  map_maker.hpp  organism.hpp  plant.hpp  profiler.hpp  schema.hpp  species_constants.hpp  stat_fetcher.hpp
Cpp/python/: CMakeLists.txt  ecosystem.cpp
Cpp/run/: CMakeLists.txt  main.cpp  style.hpp
Cpp/schema/: CMakeLists.txt  deer_generated.h  lion_generated.h  species_report.fbs  species_report_generated.h  species_report_visualisation_generated.dart  world.fbs  world_generated.h
Cpp/schema/Visualisation/: SpeciesReport.py
Cpp/schema/animal/: deer.fbs  lion.fbs
Cpp/schema/python/Ecosystem/: Sleep.py
Cpp/setup/: CMakeLists.txt  setup.cpp
Cpp/src/: CMakeLists.txt  DatabaseManager.cpp  StopWatch.cpp  animal.cpp  database_manager.cpp  ecosystem.cpp  god.cpp  helper.cpp  herbivore.cpp  logger.cpp  main.cpp  organism.cpp  plant.cpp  schema.cpp  setup.cpp  species_constants.cpp  stat_fetcher.cpp
Cpp/tests/: CMakeLists.txt  stress_tests.cpp  tests.cpp
Python/: helper.py  main.py  requirements.txt  sample.py  test.py  test_app.py
Python/RandomTests/: sanity_test.py  test1.py
app/: .gitignore  build.gradle  settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/senpai/rmg/ecosystem/: BaseUtils.java  MainActivity.java
app/app/src/main/java/ss/rmg/ecosystem/: BaseUtility.java  MainActivity.java  (+4 more)
app/app/src/main/res/drawable/: bg_round_gradient_1.xml  bg_round_gradient_2.xml  gradient_1.xml  gradient_2.xml  ic_api.xml  ic_icon.xml  ic_icon_dark.xml  ic_icon_outline.xml  ic_key.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/app/src/main/res/layout/: activity_main.xml  activity_report.xml  activity_splash.xml  dialog_invalidapi.xml  dialog_nonet.xml  dialog_unavailable.xml  dialog_updateapi.xml  item_plot.xml
app/app/src/main/res/raw/: splash.json
app/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/gradle/wrapper/: gradle-wrapper.properties
data/: ecosystem_master.db  ecosystem_master.db-journal
data/json/: deer.json
data/json/animal/deer/: base.json  current.json  modify.json
data/json/animal/lion/: base.json  modify.json
data/json/bamboo/: base.json  modify.json
data/json/deer/: base.json  current.json  modify.json
data/json/plant/bamboo/: base.json  current.json  modify.json
data/json/plant/grass/: base.json  modify.json
data/templates/json/animal/: base.json  modify.json
data/templates/json/plant/: base.json  modify.json
docs/: 404.html  README.md  _config.yml  about.html  contact.html  framework.html  index.html  motivation.html  privacy_policy.md  pull_request_template.md
docs/_layouts/: default.html
docs/assets/css/: main.css  style.css
docs/assets/js/: home.js
py/: simulate_plots.py
py/docs/: README.md
python/: helper.py  organism.py
simulation/: CMakeLists.txt  CMakePresets.json
simulation/RandomTests/: CMakeLists.txt  client.cpp  reportgen_test.cpp  sanity_test.cpp  server.cpp  test1.c  test1.cpp  test1.py  test2.cpp  test3.cpp  test4.cpp
simulation/WebApp/: CMakeLists.txt  app.cpp
simulation/cmake/: dll_utils.cmake  download_file.cmake
simulation/include/: StopWatch.hpp  avg_plot_handler.hpp  database_manager.hpp  ecosystem_export.h  ecosystem_types.hpp  ecosystem_wrapper.h  ecosystem_wrapper.hpp  ecosystem_wrapper_impl.hpp  god.hpp  helper.hpp  inspector.hpp  setup.hpp  species_constants.hpp  stat_fetcher.hpp
simulation/python/: CMakeLists.txt  ecosystem.cpp
simulation/run/: CMakeLists.txt  imspinner.h  main.cpp  main_metal.mm  main_opengl.cpp  simulation.cpp  simulation.hpp  style.hpp
simulation/schema/: CMakeLists.txt  plot.fbs  population.fbs  report_meta.fbs  species_report.fbs  world.fbs
simulation/schema/cpp/: population_generated.h  world_generated.h
simulation/schema/dart/: plot_visualisation_generated.dart  population_ecosystem_generated.dart  report_meta_visualisation_generated.dart  world_ecosystem_generated.dart
simulation/schema/python/Ecosystem/: ChromosomeStrand.py  Gender.py  KingdomE.py  Monitor.py  Organism.py  RawPopulation.py  Reproduction.py  Sleep.py  Species.py  SpeciesPopulation.py  World.py  WorldPopulation.py
simulation/schema/python/Visualisation/: Meta.py  MetaData.py  MultiPlot.py  Plot.py  PlotBundle.py  PlotGroup.py  SinglePlot.py  SpeciesReport.py
simulation/src/: CMakeLists.txt  StopWatch.cpp  avg_plot_handler.cpp  database_manager.cpp  ecosystem_wrapper.c  ecosystem_wrapper.cpp  ecosystem_wrapper_impl.cpp  god.cpp  helper.cpp  inspector.cpp  logger.cpp  organism.cpp  schema.cpp  setup.cpp  species_constants.cpp  stat_fetcher.cpp
simulation/tests/: CMakeLists.txt  stress_tests.cpp  tests.cpp
species/: deer.json
visualise/: functions.py
visualization/: annual_analysis.py  load_db.py  requirements.txt  simulation_analysis.py
visualization/helper/: enums.py  language.py  report.py  report_animal.py  report_plant.py
